# CalRigSim

./: .gitignore  CMakeLists.txt  CalData.cpp  CalData.hpp  CalRigSim  CalTarget.cpp  CalTarget.hpp  CalTex.cpp  CalTex.hpp  Calibrator.cpp  Calibrator.hpp  CameraModel.hpp  README  Renderman.cpp  Renderman.hpp  basic_cal.yml  glad.c  glad.h  main.cpp  makeit  makeitclean  new_perspective.vs  old_perspective.vs  test.yml  test_cal.yml  test_output.yml
include/: CalTarget.hpp  CalTex.hpp  Calibrator.hpp  Debugger.hpp  Renderman.hpp
include/config/: CalData.hpp  CameraModel.hpp  CapturePositionConfig.hpp  ConfigParser.hpp  ConfigTags.hpp  GeomTransform.hpp  TargetConfigData.hpp
src/: CMakeLists.txt  CalData.cpp  CalTarget.cpp  CalTex.cpp  Calibrator.cpp  CameraModel.cpp  CapturePositionConfig.cpp  ConfigParser.cpp  GeomTransform.cpp  Renderman.cpp  TextureConfigData.cpp  main.cpp
